Publish Teams, Projects and Users

--- a/app/src/main/java/com/example/studentapp/todo.txt
+++ b/app/src/main/java/com/example/studentapp/todo.txt
@@ -1,5 +1,17 @@
 Мне будет легче, если я все тудушки буду записывать сюда
-2. Закруглить края у LoginCard и SignUpCard
-4. Разобраться, как сделать "наезжающий" блок с текстом в DetailScreen
-5. Настроить прозрачность букв
-6. Сделать исчезающий FAB на SearchScreen
+1. Закруглить края у LoginCard и SignUpCard
+2. Разобраться, как сделать "наезжающий" блок с текстом в DetailScreen
+3. Настроить прозрачность букв
+4. Сделать исчезающий FAB на SearchScreen
+5. Сделать экран загрузки там, где надо
+6. Добавить auth только если это необходимо
+7. Добавить поле active в список проектов пользователя, чтобы не менять имя
+8. Сделать выход
+9. Очень долго пытался разобраться с асинхронной загрузкой портфолио, но отложим это на потом (добавить колёсико загрузки)
+
+Откликнуться
+Сообщения
+Изображения
+Отзывы
+Может быть удалить из User дублирующиеся поля
+Добавить Room для хранения истории поиска
