--- a/app/src/main/java/com/example/studentapp/todo.txt
+++ b/app/src/main/java/com/example/studentapp/todo.txt
@@ -5,9 +5,10 @@
 4. Сделать исчезающий FAB на SearchScreen
 5. Сделать экран загрузки там, где надо
 6. Добавить auth только если это необходимо
-7. Добавить поле active в список проектов пользователя, чтобы не менять имя
 8. Сделать выход
 9. Очень долго пытался разобраться с асинхронной загрузкой портфолио, но отложим это на потом (добавить колёсико загрузки)
+10. Заполнить пропуски словами
+11. Добавить тосты там, где необходимо
 
 Откликнуться
 Сообщения
